--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
   <link id="color-scheme" href="assets/css/colors/default.css" rel="stylesheet">
-  
+
 </head>
 
 <body data-spy="scroll" data-target=".onpage-navigation" data-offset="60">
@@ -56,6 +56,9 @@
   <script src="assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/main.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAA5bxNddfC3oLZILVFdH0GEDh1ZltRQNU">
+  </script>
+  </script>
 </body>
 
 </html>
