--- a/src/index.html
+++ b/src/index.html
@@ -83,8 +83,8 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <div class="fb-customerchat" page_id="1772764202733920" theme_color="#ff7e29" logged_in_greeting="Hello! How can I help you?"
-    logged_out_greeting="Hello! How can I help you?">
+  <div class="fb-customerchat" page_id="1772764202733920" theme_color="#ff7e29" logged_in_greeting="Hello! What can we do for you?"
+    logged_out_greeting="Hello! What can we do for you?">
   </div>
 </body>
 
